Changelog for plone.app.form

    (name of developer listed in brackets)

plone.app.form - 1.0 Released August 17, 2007

    - Let the UberSelectionWidget handle optional fields properly.
      [optilude]

    - Added a new LanguageDropdownChoiceWidget, which renders a dropdown widget
      which is populated by a language vocabulary. The language names are then
      localized based on the zope.i18n.locales information.
      [hannosch]

    - Added a new DisabledCheckBoxWidget, which renders a disabled variant of
      the CheckBoxWidget.
      [hannosch]

    - Keep existing date in the calendar widget in datecomponents.py. This
      closes http://dev.plone.org/plone/ticket/5833.
      [hannosch]

plone.app.form - 1.0b1 Released March 5, 2007

    - Initial implementation.
      [alecm, rocky, optilude]

    - Initial package structure.
      [zopeskel]
