@@ -2,6 +2,13 @@ Changelog for plone.app.form
 
     (name of developer listed in brackets)
 
+plone.app.form - 1.1 UNRELEASED
+
+    - Add a form validator that only validates an action when updating a
+      form. This makes it possible to add actions manually in the template
+      without having formlib autogenerate buttons in other places.
+      [wichert]
+
 plone.app.form - 1.0 Released August 17, 2007
 
     - Let the UberSelectionWidget handle optional fields properly.
